# cppcrc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cppcrc.h
benchmark/: CMakeLists.txt  Makefile  main.cpp
examples/: 01_using_built_in_crc_functions.cpp  02_creating_your_own_crc_functions.cpp  03_splitting_a_checksum_eval_into_chunks.cpp
test/: test_cppcrc.cpp
